--- a/m1001.Common/m1001.Common.csproj
+++ b/m1001.Common/m1001.Common.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="microsoft.extensions.configuration.json" Version="2.0.2" />
-    <PackageReference Include="mongocsharpdriver" Version="2.6.0" />
+    <PackageReference Include="mongodb.driver" Version="2.6.0" />
   </ItemGroup>
 
 </Project>
